fix(DEX-4354): Scrollbar covering footer text and content (#51)
* Avoid scroll bar covering footer text and content

* Formatted scss

--- a/src/features/course-view/CourseView.scss
+++ b/src/features/course-view/CourseView.scss
@@ -80,7 +80,7 @@
     border-bottom-right-radius: 0px;
     width: 100%;
 
-    &> :last-child {
+    & > :last-child {
       display: none;
     }
   }
@@ -114,8 +114,6 @@
       }
     }
   }
-
-
 }
 
 .cv-course-sidebar-mobile-closed {
@@ -131,9 +129,12 @@
   @media (max-width: map-get($grid-breakpoints, "xl")) {
     width: 100%;
   }
+
+  @media (min-width: map-get($grid-breakpoints, "xl")) {
+    // Avoid overlapping scrollbar with content on wide screens when the sidebar is extended
+    padding-right: 4px;
+  }
 }
-
-
 
 .cv-course-content {
   transition: padding-left 0.5s ease-in-out;
@@ -191,8 +192,7 @@
     &.visible {
       transform: scaleX(1);
       transition-delay: 0.3s;
-      transition: transform 0.4s cubic-bezier(.47, 1.64, .41, .8);
-
+      transition: transform 0.4s cubic-bezier(0.47, 1.64, 0.41, 0.8);
     }
   }
 }
@@ -217,7 +217,7 @@ button.sidebar-item-container {
   width: 100%;
   color: $primary-500;
 
-  &>svg {
+  & > svg {
     flex-shrink: 0;
   }
 
@@ -233,7 +233,7 @@ button.sidebar-item-container {
     left: 0;
     width: 0;
     height: 2px;
-    background-image: linear-gradient(to right, #337DA9, #337DA9);
+    background-image: linear-gradient(to right, #337da9, #337da9);
     transition: width 0.2s ease-in-out;
     transition-delay: 0.2s;
   }
@@ -242,8 +242,6 @@ button.sidebar-item-container {
     width: 100%;
     transition-delay: 0s;
     transition: width 0.3s ease-in-out;
-
-
   }
 }
 
@@ -286,7 +284,6 @@ button.sidebar-item-container {
 .sidebar-item-header.active {
   background-color: $primary-100;
   color: $primary-500;
-
 }
 
 .sidebar-item-header.sequence svg:last-of-type {
@@ -302,31 +299,28 @@ button.sidebar-item-container {
 }
 
 .sidebar-item-header.active.completed svg {
-  color: #2F8439;
+  color: #2f8439;
 }
 
 .sidebar-item-header.completed svg {
-  color: #2F8439;
+  color: #2f8439;
 }
 
 .sidebar-item-header.active.pending svg {
-  color: #A3A3A3;
+  color: #a3a3a3;
 }
 
 .sidebar-item-header.pending svg {
-  color: #C2C2C2;
+  color: #c2c2c2;
 }
 
 .sidebar-item-header.active.in-progress svg {
-  color: #002F51;
+  color: #002f51;
 }
 
 .sidebar-item-header.in-progress svg {
   color: #858585;
 }
-
-
-
 
 .sidebar-item-header.current {
   background-color: $primary-500;
@@ -346,10 +340,9 @@ button.sidebar-item-container {
   }
 }
 
-.sidebar-item-header> :last-child {
+.sidebar-item-header > :last-child {
   margin-left: auto;
 }
-
 
 .sidebar-item-collapsable {
   display: block;
