--- a/src/features/layout/Layout.scss
+++ b/src/features/layout/Layout.scss
@@ -6,20 +6,20 @@
 
 #root > footer {
   width: 100%;
-  padding-left: $minimized-sidebar-width + 8px;
+  padding-left: $minimized-sidebar-width + 24px;
   @media (max-width: map-get($grid-breakpoints, "xl")) {
     padding-left: 0px;
   }
 
   &.footer-sidebar-extended {
-    padding-left: $extended-sidebar-width;
+    padding-left: $extended-sidebar-width - 40px;
     @media (max-width: map-get($grid-breakpoints, "xl")) {
       padding-left: 0px;
     }
   }
 
   &.footer-no-sidebar {
-    padding-left: 0px;;
+    padding-left: 0px;
   }
 }
 
